--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,4 +1,9 @@
 {
+  "tasks": {
+    "start": "bash ./start.sh",
+    "dev": "bash ./dev.sh",
+    "init": "bash ./init.sh"
+  },
   "imports": {
     "dayjs": "npm:dayjs@1.11.7",
     "mongo": "https://deno.land/x/mongo@v0.31.2/mod.ts",
