various work on audio stream sockets

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -23,6 +23,7 @@
 
     "@config/": "./src/config/",
     "@api/": "./src/api/",
+    "@sockets/": "./src/sockets/",
     "@discordApi/": "./src/discordApi/",
 
     "@mongo/": "./src/mongo/",
