--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -52,4 +52,4 @@ jobs:
             mkdir ./dist && \
             tar -xzf dist.tar.gz -C ./dist && \
             rm dist.tar.gz && \
-            systemctl --user restart claudia-server-production"
+            sudo systemctl restart claudia-server-production"
